[NIAD-3122] Refactor ResourceUtil.java